--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    retuerestaurant['name']\n",
-    "    pass"
+    "    return restaurant['name']\n",
+    "    "
    ]
   },
   {
