--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if(restautant['rating'] ==)\n",
+    "    if(restautant['rating'] == alterna)\n",
     "    "
    ]
   },
