--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if(restautant['rating'] == alternative['rating'])\n",
+    "    if(restautant['rating'] == alternative['rating']):\n",
+    "        \n",
     "    "
    ]
   },
