Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if(restautant['rating'] == alternative['rating']):\n",
-    "        \n",
+    "        return \n",
     "    "
    ]
   },
