--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if(restautant['rating'] == alternative['rating']):\n",
-    "        return \n",
+    "        return False\n",
+    "    else\n",
     "    "
    ]
   },
