--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if(restautant['rating'] == alternative['rating']):\n",
     "        return False\n",
-    "    else\n",
+    "    elif \n",
     "    "
    ]
   },
