--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
     "def is_better(restaurant, alternative):\n",
     "    if(restautant['rating'] == alternative['rating']):\n",
     "        return False\n",
-    "    elif (restautant['rating'] = alternative['rating']):\n",
+    "    elif (restautant['rating'] > alternative['rating']):\n",
+    "        return Tr\n",
     "    "
    ]
   },
