Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,8 @@
     "    if(restautant['rating'] == alternative['rating']):\n",
     "        return False\n",
     "    elif (restautant['rating'] > alternative['rating']):\n",
-    "        return Tr\n",
+    "        return True\n",
+    "    else:\n",
     "    "
    ]
   },
