--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
     "    elif (restautant['rating'] > alternative['rating']):\n",
     "        return True\n",
     "    else:\n",
-    "        \n",
+    "        pass\n",
     "    "
    ]
   },
