--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if(len(restaurant)  alternative):\n",
+    "    if(len(restaurant['price']) < alternative):\n",
     "    pass"
    ]
   },
