--- a/index.ipynb
+++ b/index.ipynb
@@ -414,7 +414,7 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if(len(restaurant['price']) < len(alternative['price']):\n",
-    "       \n",
+    "       return \n",
     "    pass"
    ]
   },
