--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,8 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    if(len(restaurant['price']) < len(alternative['price']):\n",
     "       return True\n",
-    "    if(len(restaurant['price']) < len(alternative['price'])\n",
+    "    elif(len(restaurant['price']) >= len(alternative['price'])\n",
+    "         \n",
     "    \n",
     "    pass"
    ]
