--- a/index.ipynb
+++ b/index.ipynb
@@ -408,23 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-e59fe9cd5745>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-e59fe9cd5745>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if(len(restaurant['price']) < len(alternative['price']):\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if(len(restaurant['price']) < len(alternative['price']):\n",
+    "    if(len(restaurant['price']) < len(alternative['price'])):\n",
     "       return True\n",
-    "    elif(len(restaurant['price']) >= len(alternative['price']):\n",
+    "    elif(len(restaurant['price']) >= len(alternative['price'])):\n",
     "         return False\n",
     "    else:\n",
     "         pass\n",
@@ -434,9 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_cheaper(fork_fig, frontier_restaurant) # False"
    ]
