--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if(restaurant' rating):\n",
+    "    if(restaurant['rating'] >= rating):\n",
     "    pass"
    ]
   },
