--- a/index.ipynb
+++ b/index.ipynb
@@ -498,6 +498,7 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if(restaurant['rating'] >= rating):\n",
+    "        return True\n",
     "    pass"
    ]
   },
