--- a/index.ipynb
+++ b/index.ipynb
@@ -492,21 +492,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if(restaurant['rating'] >= rating):\n",
     "        return True\n",
-    "    pass"
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "high_rating(fork_fig, 4) # True"
    ]
